package services.command;

public interface Command {
    /**
     * Execute the current command.
     */
    void execute();
}
